--- a/index.Rmd
+++ b/index.Rmd
@@ -677,20 +677,13 @@ Education
 .panelset[
 .panel[.panel-name[SWOT]
 
-### Strengths
-### Weakness
-### Opportunities
-### Threat
+<img src="images/SWOT1.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/>
 
 ]
 
 .panel[.panel-name[Feasibility]
 
-### Technical - T
-### Economic - E
-### Legal - L
-### Operational - O
-### Scheduling - S
+<img src="images/Feasibility.png" height="500px" style="display: block; margin-left: auto; margin-right: auto;"/>
 
 ]
 
