--- a/index.Rmd
+++ b/index.Rmd
@@ -1,4 +1,3 @@
-
 ---
 title: "Remote Sensing for Identifying Rooftop Farming and Gardening Potentials in Jakarta, Indonesia"
 subtitle: ""
@@ -7,7 +6,7 @@ institute: "CASA, UCL"
 date: "2024/02/04 (updated: `r Sys.Date()`)"
 output:
   xaringan::moon_reader:
-    css: [xaringan-themer.css, custom.css]
+    css: xaringan-themer.css
     lib_dir: libs
     nature:
       highlightStyle: github
